// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RouteMap > printHelp > aliased nested route map with aliases > no ANSI color 1`] = `
"USAGE
  cli alias1 doNothing
  cli alias1 sub doNothing1|doNothing2 ...
  cli alias1 --help
  cli alias1 --version

route map brief

ALIASES
  cli route
  cli alias2

FLAGS
  -h --help     Print help information and exit
  -v --version  Print version information and exit

COMMANDS
  doNothing  top command brief
  sub        sub route map brief
"
`;

exports[`RouteMap > printHelp > aliased nested route map with aliases > with ANSI color 1`] = `
"[1mUSAGE[22m
  cli alias1 doNothing
  cli alias1 sub doNothing1|doNothing2 ...
  cli alias1 --help
  cli alias1 --version

route map brief

[1mALIASES[22m
  cli route
  cli alias2

[1mFLAGS[22m
  [01m-h[22m [01m--help[22m     [03mPrint help information and exit[23m
  [01m-v[22m [01m--version[22m  [03mPrint version information and exit[23m

[1mCOMMANDS[22m
  [01mdoNothing[32m  [03mtop command brief[23m
  [01msub[32m        [03msub route map brief[23m
"
`;

exports[`RouteMap > printHelp > nested route map > no ANSI color 1`] = `
"USAGE
  prefix doNothing
  prefix sub doNothing1|doNothing2 ...
  prefix --help

route map brief

FLAGS
  -h --help  Print help information and exit

COMMANDS
  doNothing  top command brief
  sub        sub route map brief
"
`;

exports[`RouteMap > printHelp > nested route map > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix doNothing
  prefix sub doNothing1|doNothing2 ...
  prefix --help

route map brief

[1mFLAGS[22m
  [01m-h[22m [01m--help[22m  [03mPrint help information and exit[23m

[1mCOMMANDS[22m
  [01mdoNothing[32m  [03mtop command brief[23m
  [01msub[32m        [03msub route map brief[23m
"
`;

exports[`RouteMap > printHelp > nested route map force include hidden routes > no ANSI color 1`] = `
"USAGE
  prefix doNothing
  prefix sub doNothing1|doNothing2 ...
  prefix --help
  prefix --version

route map brief

FLAGS
  -h --help     Print help information and exit
  -v --version  Print version information and exit

COMMANDS
  doNothing  top command brief
  sub        sub route map brief
"
`;

exports[`RouteMap > printHelp > nested route map force include hidden routes > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix doNothing
  prefix sub doNothing1|doNothing2 ...
  prefix --help
  prefix --version

route map brief

[1mFLAGS[22m
  [01m-h[22m [01m--help[22m     [03mPrint help information and exit[23m
  [01m-v[22m [01m--version[22m  [03mPrint version information and exit[23m

[1mCOMMANDS[22m
  [01mdoNothing[32m  [03mtop command brief[23m
  [90msub[39m        [90msub route map brief[39m
"
`;

exports[`RouteMap > printHelp > nested route map with \`convert-camel-to-kebab\` display case style > no ANSI color 1`] = `
"USAGE
  prefix do-nothing
  prefix sub do-nothing1|do-nothing2 ...
  prefix --help
  prefix --version

Longer description of this route map's behavior, only printed during --help

FLAGS
  -h --help     Print help information and exit
  -v --version  Print version information and exit

COMMANDS
  do-nothing  top command brief
  sub         sub route map brief
"
`;

exports[`RouteMap > printHelp > nested route map with \`convert-camel-to-kebab\` display case style > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix do-nothing
  prefix sub do-nothing1|do-nothing2 ...
  prefix --help
  prefix --version

Longer description of this route map's behavior, only printed during --help

[1mFLAGS[22m
  [01m-h[22m [01m--help[22m     [03mPrint help information and exit[23m
  [01m-v[22m [01m--version[22m  [03mPrint version information and exit[23m

[1mCOMMANDS[22m
  [01mdo-nothing[32m  [03mtop command brief[23m
  [01msub[32m         [03msub route map brief[23m
"
`;

exports[`RouteMap > printHelp > nested route map with aliases > no ANSI color 1`] = `
"USAGE
  cli route doNothing
  cli route sub doNothing1|doNothing2 ...
  cli route --help
  cli route --version

route map brief

ALIASES
  cli alias1
  cli alias2

FLAGS
  -h --help     Print help information and exit
  -v --version  Print version information and exit

COMMANDS
  doNothing  top command brief
  sub        sub route map brief
"
`;

exports[`RouteMap > printHelp > nested route map with aliases > with ANSI color 1`] = `
"[1mUSAGE[22m
  cli route doNothing
  cli route sub doNothing1|doNothing2 ...
  cli route --help
  cli route --version

route map brief

[1mALIASES[22m
  cli alias1
  cli alias2

[1mFLAGS[22m
  [01m-h[22m [01m--help[22m     [03mPrint help information and exit[23m
  [01m-v[22m [01m--version[22m  [03mPrint version information and exit[23m

[1mCOMMANDS[22m
  [01mdoNothing[32m  [03mtop command brief[23m
  [01msub[32m        [03msub route map brief[23m
"
`;

exports[`RouteMap > printHelp > nested route map with hidden routes > no ANSI color 1`] = `
"USAGE
  prefix doNothing
  prefix --help
  prefix --version

route map brief

FLAGS
  -h --help     Print help information and exit
  -v --version  Print version information and exit

COMMANDS
  doNothing  top command brief
"
`;

exports[`RouteMap > printHelp > nested route map with hidden routes > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix doNothing
  prefix --help
  prefix --version

route map brief

[1mFLAGS[22m
  [01m-h[22m [01m--help[22m     [03mPrint help information and exit[23m
  [01m-v[22m [01m--version[22m  [03mPrint version information and exit[23m

[1mCOMMANDS[22m
  [01mdoNothing[32m  [03mtop command brief[23m
"
`;

exports[`RouteMap > printHelp > nested route map with version available > no ANSI color 1`] = `
"USAGE
  prefix doNothing
  prefix sub doNothing1|doNothing2 ...
  prefix --help
  prefix --version

Longer description of this route map's behavior, only printed during --help

FLAGS
  -h --help     Print help information and exit
  -v --version  Print version information and exit

COMMANDS
  doNothing  top command brief
  sub        sub route map brief
"
`;

exports[`RouteMap > printHelp > nested route map with version available > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix doNothing
  prefix sub doNothing1|doNothing2 ...
  prefix --help
  prefix --version

Longer description of this route map's behavior, only printed during --help

[1mFLAGS[22m
  [01m-h[22m [01m--help[22m     [03mPrint help information and exit[23m
  [01m-v[22m [01m--version[22m  [03mPrint version information and exit[23m

[1mCOMMANDS[22m
  [01mdoNothing[32m  [03mtop command brief[23m
  [01msub[32m        [03msub route map brief[23m
"
`;

exports[`RouteMap > printHelp > nested route maps with custom header text > no ANSI color 1`] = `
"Usage:
  cli route doNothing
  cli route sub doNothing1|doNothing2 ...
  cli route --help
  cli route --version

route map brief

Aliases:
  cli alias1
  cli alias2

Flags:
  -h --help     Print help information and exit
  -v --version  Print version information and exit

Commands:
  doNothing  top command brief
  sub        sub route map brief
"
`;

exports[`RouteMap > printHelp > nested route maps with custom header text > with ANSI color 1`] = `
"[1mUsage:[22m
  cli route doNothing
  cli route sub doNothing1|doNothing2 ...
  cli route --help
  cli route --version

route map brief

[1mAliases:[22m
  cli alias1
  cli alias2

[1mFlags:[22m
  [01m-h[22m [01m--help[22m     [03mPrint help information and exit[23m
  [01m-v[22m [01m--version[22m  [03mPrint version information and exit[23m

[1mCommands:[22m
  [01mdoNothing[32m  [03mtop command brief[23m
  [01msub[32m        [03msub route map brief[23m
"
`;
